src/App.css
/* ... */
.hola-link {
    padding: 10px 40px;
    margin: 4px;
}

.contenedor-icon-socialmedia {
    display: flex;
    margin: 1rem;
}

.icon-socialmedia {
    margin-right: 3rem;
    align-self: center;
    white-space: nowrap;
    /* ^^^ el texto del boton queda siempre en la misma línea */
}

/*--------------------------------
        SECCIÓN SKILLS
----------------------------------*/

.seccion-skills {
    background-color: #d3faf540;
    padding: 45px;
    align-items: center;
    flex-direction: column;
}

/* -- CAJA DE TARJETAS -- */
.contenedor-skills {
    width: 80%;
    margin-top: 40px;
    padding: 2rem;
    justify-content: center;
    flex-wrap: wrap;
}

/* -- CAJA DE CADA TARJETA -- */
.skills {
    background-color: #fafafa;
    border: 1px #dddfe5 solid;
    border-radius: 10px;
    width: 30%;
    margin: 0.5rem;
    padding: 2rem;
    color: #2e2e31;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    cursor: pointer;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    justify-content: center;
    align-items: center;
}

.img-skills {
    width: 65%;
    height: auto;
}

.logos-skills {
    justify-content: center;
}

.texto-skills {
    padding: 10px 220px;
}

.h2-skills {
    margin-top: 100px;
}

.p-titulo-skills {
    font-weight: 700;
    font-size: 20px;
    white-space: nowrap;
    padding-top: 1rem;
    margin: 20px 0 0 0;
}

/*--------------------------------
        SECCIÓN QUOTE
----------------------------------*/
.seccion-quote {
    background: rgb(0, 223, 192);
    background: linear-gradient(180deg, rgba(0, 223, 192, 1) 0%, rgba(27, 70, 61, 1) 94%, rgba(33, 60, 56, 1) 100%);
    color: #fafafa;
    padding: 100px 40px 100px;
    justify-content: center;
    height: 100%;
}

.div-quote {
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.p-quote {
    font-family: 'Allura';
    font-size: 35px;
    margin: 10px 100px;
}

.h3-quote {
    font-family: 'Allura';
    font-size: 60px;
    color: #fafafa;
    padding-bottom: 20px;
    font-weight: normal;
}

.img-quote {
    width: 15%;
    padding-bottom: 80px;
}

.ico-quote {
    margin-bottom: 35px;
    width: 4em;
    height: 3.5rem;
}

.ico-mobile {
    width: 2em;
}

.ico-bigscreen {
    width: 6em;
}

/*--------------------------------
        SECCIÓN PROYECTOS
----------------------------------*/
.seccion-proyectos {
    background-color: #d3faf526;
    padding: 45px;
}

/* -- MENÚ -- */
.botonera-proyectos {
    justify-content: center;
    padding: 20px 0;
    margin: 20px auto 10px auto;
}

.menu-proyectos {
    font-size: 16px;
    background-color: #d3faf526;
    border: none;
    padding: 15px 40px;
    text-decoration: none;
    border-radius: 25px;
    transition: 0.4s;
}

.menu-proyectos:hover {
    background-color: #007b67;
    border-radius: 25px;
    color: #d3faf5;
    padding: 10px 40px;
    cursor: pointer;
}

.buttonClicked {
    background-color: #007b67;
    border-radius: 25px;
    color: #d3faf5;
}

.menu-proyectos:focus {
    background-color: #007b67;
    border-radius: 25px;
    color: #d3faf5;
}

/* -- CAJA DE TARJETAS -- */
.contenedor-proyectos {
    display: flex;
    margin-top: 40px;
    padding: 30px;
    justify-content: center;
    flex-wrap: wrap;
}

/* -- CAJA DE CADA TARJETA -- */
.proyectos {
    background-color: #fafafa;
    border: 1px #dddfe5 solid;
    border-radius: 10px;
    width: 330px;
    height: 287px;
    margin: 10px;
    padding: 30px;
    color: #2e2e31;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.img-proyectos {
    margin: 5px 35px 5px 35px;
    object-position: center;
}

.h2-proyectos {
    margin-top: 100px;
}

.p-titulo-proyectos {
    font-weight: 700;
    font-size: 16px;
    margin-top: 0;
}

/*--------------------------------
            FOOTER
----------------------------------*/
.seccion-footer {
    background-color: #009c86;
    padding: 45px;
    flex-direction: column;
}

/* -- MENÚ -- */
.nav-footer {
    justify-content: center;
    align-items: center;
    padding: 20px 0;
    margin: 10px auto 10px auto;
}

.menu-footer {
    font-size: 14px;
    color: #00dfc0;
    color: var(--color-teal-muy-clarito);
}

.emoji-size {
    font-size: 25px;
}

/* -- LOGOS -- */
.div-contacto {
    justify-content: center;
}

.img-contacto {
    width: 80px;
    padding: 10px;
    margin: 10px;
    transition: 0.3s;
}

/* -- TEXTO -- */
.span-footer {
    color: #fafafa;
    cursor: pointer;
}

.span-footer a {
    color: #fafafa;
}

.amor {
    color: #00dfc0;
    font-size: 18px;
}

.footer-recursos {
    font-size: 9px;
    margin-top: 2rem;
    gap: 0.5rem;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
}

.footer-recursos a {
    font-weight: 400;
    color: var(--color-teal-muy-clarito);
}

.footer-cada-recurso {
    padding: 0.5rem;
}

/* contenedor de los iconos */
.footer-socialmedia-icons {
    display: flex;
    justify-content: center;
    color: var(--color-data-bases);
    padding-bottom: 1rem;
}

.footer-icons {
    color: var(--color-teal-muy-clarito);
    margin: 1rem;
    size: 3rem;
}

.footer-color-icons {
    color: var(--color-teal-muy-clarito);
}

.footer-signature-container {
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

